css/root.css
/* ... */
/* Small Desktop */
@media only screen and (min-width: 64em) {
  #footer {
    font-size: min(1.2vw, 1em);
  }
  #footer .container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -ms-flex-wrap: nowrap;
        flex-wrap: nowrap;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    width: 96%;
    max-width: 82.5em;
    margin: auto;
    padding: 0;
  }
  #footer .left-section {
    width: 25.5625em;
    margin: 0;
    text-align: left;
  }
  #footer .left-section .logo {
    text-align: left;
    margin-left: 0;
    height: 4.375em;
  }
  #footer .left-section p {
    text-align: left;
    margin-left: 0;
  }
  #footer .right-section {
    margin: 0;
    width: 38.0625em;
    max-width: none;
  }
  #footer .right-section .lists {
    width: 96%;
    max-width: 48.0625em;
    margin: 0;
    max-width: initial;
  }
  #footer .right-section .lists ul:nth-of-type(3) {
    margin-top: 0;
  }
  #footer .right-section .lists ul:nth-of-type(3) li:first-of-type {
    margin-bottom: 0;
  }
  #footer .right-section .lists ul li a {
    position: relative;
  }
  #footer .right-section .lists ul li a:before {
    content: '';
    position: absolute;
    display: block;
    height: 0.11111111em;
    width: 0%;
    background: var(--primary);
    opacity: 1;
    bottom: -0.16666667em;
    left: 0;
    -webkit-transition: width .3s;
    transition: width .3s;
  }
  #footer .right-section .lists ul li a:hover:before {
    width: 100%;
  }
  #footer .right-section .buttons {
    -webkit-box-pack: start;
        -ms-flex-pack: start;
            justify-content: flex-start;
  }
  #footer .credit .copyright {
    display: inline-block;
  }
}
/* Dark Mode */
@media only screen and (min-width: 0em) {
  body.dark-mode #footer {
    background: #061623;
  }
}

/* Reduce space between stacked sections */
#sidebyside,
#sidebyside-reverse {
  padding-top: 40px;   /* adjust to taste */
  padding-bottom: 40px;
  margin-bottom: 0;    /* kill any big gaps */
}

#sidebyside + #sidebyside-reverse {
  margin-top: -20px;   /* pulls them closer together */
}

